--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,96 @@
-Flask==1.1.2
-Flask-Cors==3.0.10
+absl-py==1.1.0
+akinator.py==5.0.0
+anaconda-navigator==2.1.4
+Animapy==1.5.3.1
+appdirs==1.4.4
+asgiref==3.5.2
+astunparse==1.6.3
+async-generator==1.10
+atomicwrites==1.4.0
+backports.weakref==1.0.post1
+bkcharts==0.2
+black==19.10b0
+brotlipy==0.7.0
+cachetools @ file:///tmp/build/80754af9/cachetools_1619597386817/work
+certifi==2021.10.8
+clyent==1.2.2
+conda==4.12.0
+conda-build==3.21.
+conda-verify==3.4.2
+constantly==15.1.0
+cssselect==1.1.0
+cytoolz==0.11.0
+daal4py==2021.5.0
+datashape==0.5.4
+Django==4.0.5
+django-cors-headers==3.13.0
+djangorestframework==3.13.1
+et-xmlfile==1.1.0
+flatbuffers==1.12
+fonttools==4.25.0
+gast==0.4.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
 gunicorn==20.1.0
-numpy==1.21.5
+h11==0.13.0
+inflection==0.5.1
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+libclang==14.0.1
+llvmlite==0.38.0
+mccabe==0.6.1
+mkl-fft==1.3.1
+mkl-service==2.4.0
+mpmath==1.2.1
+multitasking==0.0.10
+munkres==1.1.4
+mwparserfromhell==0.6.4
+mypy-extensions==0.4.3
+navigator-updater==0.2.1
+oauthlib==3.2.0
+obonet==0.3.0
+opt-einsum==3.3.0
+outcome==1.2.0
 pandas==1.4.2
+pathspec==0.7.0
+patsy==0.5.2
+pep8==1.7.1
+Pillow==9.0.1
+protobuf==3.19.1
+pyasn1-modules==0.2.8
+pycosat==0.6.3
+pycurl==7.44.1
+PyDispatcher==2.0.5
+pyls-spyder==0.4.0
+pytest==7.1.1
+python-dotenv==0.20.0
+python-lsp-jsonrpc==1.0.0
+python-lsp-server==1.2.4
+pytz==2021.3
+pywikibot==7.3.0
+PyYAML==6.0
+queuelib==1.5.0
+requests-oauthlib==1.3.1
+scikit-learn-intelex==2021.20220215.132722
+selenium==4.2.0
+sip==4.19.13
+sklearn==0.0
+sqlparse==0.4.2
+tabulate==0.8.9
+TBB==0.2
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+termcolor==1.1.0
+trio==0.21.0
+trio-websocket==0.9.2
+webdriver-manager==3.7.0
+webencodings==0.5.1
+Wikipedia-API==0.5.4
+wsproto==1.1.0
+xlwings==0.24.9
+yfinance==0.1.70
+zict==2.0.0
